--- a/templates/post.html
+++ b/templates/post.html
@@ -37,7 +37,7 @@
             {% endif %}
         </div>
 
-        <a href="/index.html" class="back-link">← Back to Home</a>
+        <a href="/" class="back-link">← Back to Home</a>
     </main>
 </body>
 </html>
