better style + upgrade pagination

--- a/templates/post.html
+++ b/templates/post.html
@@ -24,20 +24,20 @@
         </article>
 
         <div class="nav-links">
-            {% if previous_post %}
-                <a href="/posts/{{ previous_post.slug }}.html">← {{ previous_post.title }}</a>
+            {% if next_post %}
+                <a href="{{ base_url }}/posts/{{ next_post.slug }}.html">{{ next_post.title }} →</a>
             {% else %}
                 <span></span>
             {% endif %}
 
-            {% if next_post %}
-                <a href="/posts/{{ next_post.slug }}.html">{{ next_post.title }} →</a>
+            {% if previous_post %}
+                <a href="{{ base_url }}/posts/{{ previous_post.slug }}.html">← {{ previous_post.title }}</a>
             {% else %}
                 <span></span>
             {% endif %}
         </div>
 
-        <a href="/" class="back-link">← Back to Home</a>
+        <a href="{{ base_url }}/index.html">← Back to Home</a>
     </main>
 </body>
 </html>
